still not working sorry

--- a/Exam/DBBL/appsettings.json
+++ b/Exam/DBBL/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Monsters" : "Host=localhost; Port=1337; Database=DotNetExam; Username=postgres; Password=admin"
+  }
 }
